Integrate new ImmutableList class.